desktop is not responsive and breaks easily, bat 500px it looks more or less correct, moving on to code challenges for the sake of time

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,41 +1,36 @@
-
-  * {
-    border: 1px solid black;
-  }
-
-  .first {
-    height: 75px;
-    width: 480px;
-  }
-
-  .second {
-    height: 150px;
-    width: 480px;
-  }
-
-  .third {
-    height: 125px;
-    width: 480px;
-  }
-
-  .fourth {
-    height: 250px;
-    width: 240px;
-  }
-
-  .fifth {
-    height: 250px;
-    width: 240px;
-  }
-
-
-  /* changing from fifth to sixth */
-  .sixth {
-    height: 80px;
-    width: 480px;
-  }
-
-
-@media screen and (max-width: 480px) {
- 
+  
+.first {
+  width: 960px;
+  height: 100px;
 }
+
+.second {
+  width: 200px;
+  height: 600px;
+}
+
+.third {
+  height: 200px;
+  width: 380px;
+
+}
+
+.fourth {
+  width: 190px;
+  height: 250px;
+}
+
+.fifth {
+  width: 190px;
+  height: 250px;
+}
+
+
+/* changing from fifth to sixth */
+.sixth {
+  height: 150px;
+  width: 760px;
+}
+
+
+/* adfadfasdf */
